--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,5 +1,9 @@
-<% @descs.each do |desc| %> 
-  <% desc.sample(20).each do |de| %>
-    <%= de %><br>
-  <% end %>
+<% 1.times do %>
+  <h3><%= @title_collections.sample %></h3>
+  <br>
+  <%= raw @img_tag_collections.sample %>
+  <br>
+  <% @desc_collections.sample(15).each do |desc| %>
+    <%= desc %> <br><br>
+  <% end %>  
 <% end %>
