--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,14 +1,17 @@
 <%= notice %>
 <%= link_to "token取得", "/auth/facebook" %>
 
-<%= form_tag({:controller => 'mains', :action => 'post'}, {:multipart => true} ) do %>
+<%= form_tag(:controller => 'mains', :action => 'post' ) do %>
 
   <% 1.times do %>
     <h3><%= @title_collection %></h3>
     <%= hidden_field_tag "title", @title_collection %>
     <br>
-    <%= file_field_tag :images %>  
+    <%#= image_tag @img_tag_collection %>
+    <%= image_tag "http://www.universe-s.com/img/news/2004/0520_01.jpg" %>
     <br>
+    <%#= hidden_field_tag "img", @img_tag_collection %>  
+    <%= hidden_field_tag "img",  "http://www.universe-s.com/img/news/2004/0520_01.jpg" %>  
 
     <% @desc_collections.each do |desc| %>
       <%= desc %> <br><br>
