--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -4,19 +4,11 @@
 <%= form_tag(:controller => 'mains', :action => 'post' ) do %>
 
   <% 1.times do %>
-    <h3><%= @title_collection %></h3>
-    <%= hidden_field_tag "title", @title_collection %>
-    <br>
     <%= image_tag @img_tag_collection %>
-    <%#= image_tag "http://www.universe-s.com/img/news/2004/0520_01.jpg" %>
     <br>
-    <%= hidden_field_tag "img", @img_tag_collection %>  
-    <%#= hidden_field_tag "img",  "http://www.universe-s.com/img/news/2004/0520_01.jpg" %>  
+    <%= hidden_field_tag "img", @img_tag_collection %>   
 
-    <% @desc_collections.each do |desc| %>
-      <%= desc %> <br><br>
-    <% end %>
-    <%= hidden_field_tag "desc", wrap_descs(@desc_collections) %>  
+    <%= text_area_tag "desc", wrap_descs(@desc_collections, @title_collection), :size=>"70x30" %>  
 
   <% end %>
 
