--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -9,16 +9,17 @@
     <%= image_tag @img_tag_collection %>
   </div>
   <%= notice %>
-
-  <button class="action-getdescription" >内容更新</button>
   <p>
-  <%= form_tag({:controller => 'mains', :action => 'post'},{:class => "iihanashi-form", :id => "text" }) do %>
+  <%= form_tag({:controller => 'mains', :action => 'post'}, {:class => "iihanashi-form", :id => "text" }) do %>
  
-    <br>
     <div class="main-image_hidden">
       <%= hidden_field_tag "img", @img_tag_collection %>   
     </div>
     <%= text_area_tag "desc", wrap_descs(@desc_collections, @title_collection), :size=>"70x30" %>  
-    <%= link_to "facebookに投稿", "", {:class => "action-submit"} %>
+  </p>
+    <%= link_to image_tag("button_2.png"), "", {:class => "action-submit", :width => "245", :height => "35", :alt => "Facebookでシェアする", :title => "Facebookでシェアする" } %>
+  </p>
   <% end %>
+
+  <%= render "_partials/footer" %>
 </div>
