まずざっと埋めてみた

--- a/app/views/_partials/_footer.html.erb
+++ b/app/views/_partials/_footer.html.erb
@@ -1,7 +1,7 @@
 <div id="footer">
   <p>
     <%= link_to "http://tuxurecords.tumblr.com/", :target => "blank", :alt => "Powered by つくしレコーズ", :title => "Powered by つくしレコーズつくしレコーズ" do %>
-      <%= image_tag "powerd.png", :width => "250", :height => "10" %>
+      <%= image_tag "powered.png", :width => "250", :height => "10" %>
     <% end %>
   </p>
 </div>
