--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -1,6 +1,6 @@
 <%= render '_partials/header' %>
 <a href="http://tuxurecords.tumblr.com/" target="_blank" alt="つくしレコーズ" title="つくしレコーズ">
-  <img width="120" height="52" border="0" style="position:absolute; left:25px; top:25px; margin:0px; padding:0px" src="tuxu_logo.png" />
+  <%= image_tag "tuxu_logo.png", :width => "120", :height => "52", :border => "0", :style => "position:absolute; left:25px; top:25px; margin:0px; padding:0px" %>
 </a>
 <%= render "_partials/title"%>
 
@@ -15,13 +15,13 @@
       <div class="main-image_hidden">
         <%= hidden_field_tag "img", @img_tag_collection %>   
       </div>
-      <%= text_area_tag "desc", wrap_descs(@desc_collections, @title_collection), :size=>"70x30" %>
+      <%= text_area_tag "desc", wrap_descs(@desc_collections, @title_collection), :size=>"75x50" %>
     </p>
 
     <div id="contents-img">
-      <p>
+      
         <%= link_to image_tag("button_2.png"), "", {:class => "action-submit", :width => "245", :height => "35", :alt => "Facebookでシェアする", :title => "Facebookでシェアする" } %>
-      </p>
+      
     </div>
 
   <% end %>
