こまかなhtml周りの修正

--- a/app/views/_partials/_title.html.erb
+++ b/app/views/_partials/_title.html.erb
@@ -15,5 +15,5 @@
     </a>
   </p>
   <br />
-  <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Ftuxurecords.tumblr.com%2Fpost%2F45904853580&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=20" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:20px;" allowTransparency="true"></iframe>
+  <iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2F%25E3%2581%25A4%25E3%2581%258F%25E3%2581%2597%25E3%2583%25AC%25E3%2582%25B3%25E3%2583%25BC%25E3%2582%25BA%2F111664325581937&amp;width=292&amp;height=62&amp;show_faces=false&amp;colorscheme=light&amp;stream=false&amp;show_border=false&amp;header=false" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:292px; height:62px;" allowTransparency="true"></iframe>
 </div>
