--- a/app/views/mains/thanks.html.erb
+++ b/app/views/mains/thanks.html.erb
@@ -1,6 +1,8 @@
-<%= form_tag({:controller => 'mains', :action => 'post'},{:class => "iihanashi-post"} ) do %>
-    <%= hidden_field_tag "img", @img %>   
-  <%= hidden_field_tag "desc", @desc %>
-<% end %>
+<div id="contents">
+	<%= form_tag({:controller => 'mains', :action => 'post'},{:class => "iihanashi-post"} ) do %>
+	    <%= hidden_field_tag "img", @img %>   
+	  <%= hidden_field_tag "desc", @desc %>
+	<% end %>
 
-<div class="statement-notice"> </div>
+	<div class="statement-notice"> </div>
+</div>
