html的な変更指摘をまとめコミット

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,11 @@
     <meta name="text:Link Title 4" content=""/>
     <meta name="text:Link URL 4" content=""/>
 
-    <meta property="og:title" content="いい話と思ったらシェア ジェネレータ「つくし」" />
+    <meta property="og:title" content="いい話と思ったらシェアジェネレータ「つくし」" />
     <meta property="og:site_name" content="つくしレコーズ" />
     <meta property="og:type" content="product" />
     <meta property="og:keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records"/>
-    <meta property="og:image" content="http://hogehoge.jpg" />
+    <meta property="og:image" content= "iihanashi.jpg" />
     <meta property="fb:admins" content="100001726960606" />
 
     <meta name="keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records" />
