--- a/app/assets/stylesheets/iihanashi.css
+++ b/app/assets/stylesheets/iihanashi.css
@@ -10,7 +10,6 @@
 body {
       background: #7DB0DF;
       color:#000000;
-      font-family: Helvetica;
       font-size: 16px;
       text-align:center;
       margin: 0
@@ -60,4 +59,8 @@ body {
   margin-top: 10px;
   height:60px;
   text-align: center;
+}
+
+textarea{
+  width: 550px;
 }
