ogこれでいいのか

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <meta property="og:site_name" content="つくしレコーズ" />
     <meta property="og:type" content="product" />
     <meta property="og:keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records"/>
-    <meta property="og:image" content= "iihanashi.jpg" />
+    <meta property="og:image" content= '<%= image_tag "iihanashi.jpg" %>' />
     <meta property="fb:admins" content="100001726960606" />
 
     <meta name="keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records" />
