kamp削除  文言修正

--- a/app/views/_partials/_title.html.erb
+++ b/app/views/_partials/_title.html.erb
@@ -1,12 +1,12 @@
 <div id="title">
   <p>
     <%= image_tag "logo.png", :width => "855", :height => "156", 
-    :alt => "いい話と思ったらシェアジェネレータ「つくし」",
-    :title => "いい話と思ったらシェアジェネレータ「つくし」" %>
+    :alt => "いい話と思ったらシェアジェネレーター「つくし」",
+    :title => "いい話と思ったらシェアジェネレーター「つくし」" %>
   </p>
   <p><%= image_tag "setumei.png", :width => "535", :height => "50", 
-      :alt => "『いい話と思ったらシェアジェネレータ「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレータです。", 
-      :title => "『いい話と思ったらシェアジェネレータ「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレータです。" %>
+      :alt => "『いい話と思ったらシェアジェネレーター「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレーターです。", 
+      :title => "『いい話と思ったらシェアジェネレーター「つくし」』は、Facebookでシェアされやすい”いい話”を作るジェネレーターです。" %>
   </p>
   <br />
   <p>
