--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>いい話と思ったらシェア ジェネレータ「つくし」</title>
+    <title>いい話と思ったらシェア ジェネレーター「つくし」</title>
     <link rel="icon" href="http://25.media.tumblr.com/avatar_fa116009887a_16.png" />
 
     <meta name="color:Links" content="#f47790"/>
@@ -18,15 +18,15 @@
     <meta name="text:Link Title 4" content=""/>
     <meta name="text:Link URL 4" content=""/>
 
-    <meta property="og:title" content="いい話と思ったらシェアジェネレータ「つくし」" />
+    <meta property="og:title" content="いい話と思ったらシェアジェネレーター「つくし」" />
     <meta property="og:site_name" content="つくしレコーズ" />
     <meta property="og:type" content="product" />
-    <meta property="og:keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records"/>
+    <meta property="og:keywords" content="いい話と思ったらシェアジェネレーター「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records"/>
     <meta property="og:image" content="http://tuxurecords.sakura.ne.jp/iihanashi/iihanashi.jpg" />
     <meta property="fb:admins" content="100001726960606" />
 
-    <meta name="keywords" content="いい話と思ったらシェアジェネレータ「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records" />
-    <meta name="description" content="いい話と思ったらシェア ジェネレータ「つくし」" />
+    <meta name="keywords" content="いい話と思ったらシェアジェネレーター「つくし」,いい話と思ったらシェア,つくしレコーズ,ネットレーベル,tuxurecords,つくしレコード,tukushi records" />
+    <meta name="description" content="いい話と思ったらシェア ジェネレーター「つくし」" />
     <meta http-equiv="x-dns-prefetch-control" content="off"/>
 
     <%= stylesheet_link_tag    "application", :media => "all" %>
